--- a/web/login.html
+++ b/web/login.html
@@ -5,7 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/src/img/icon/daisii.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Who are you??</title>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Space Mono', monospace;
